diffs: make sure hunk lines are also collapsed on large diffs that are hidden.

--- a/rhodecode/public/css/code-block.less
+++ b/rhodecode/public/css/code-block.less
@@ -1024,6 +1024,9 @@ table.cb {
         .cb-collapse {
             display: none;
         }
+        .cb-hunk {
+            display: none;
+        }
     }
 
     /* intentionally general selector since .cb-line-selected must override it
